# finetune

./: .gitignore  README.md  main.py  pyproject.toml
example/: main.py
finetune/: __init__.py  main.py
finetune/src/: data.py  model.py  utils.py
notebooks/: chapter_2_proteins copy.ipynb  chapter_2_proteins_streamlined.ipynb
tools/: __init__.py  data.py  model.py  triton_masked_mean.py  utils.py  visualization.py
