[project]
name = "finetune"
version = "0.1.0"
description = "Fine-tune ESM2 to classify proteins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "numpy>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finetune"]
