[project]
name = "finetune"
version = "0.1.0"
description = "Fine-tune ESM2 to classify proteins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "numpy>=2.3.3",
    "pandas>=2.0.0",
    "obonet>=1.1.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finetune"]
