[project]
name = "finetune"
version = "0.1.0"
description = "Fine-tune ESM2 to classify proteins"
readme = "README.md"
requires-python = ">=3.11"
scripts = {finetune = "example.main:main"}
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "numpy>=2.3.3",
    "pandas>=2.0.0",
    "obonet>=1.1.0",
    "jax[cuda12-pip]>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=12.0.0",
    "dlfb",
    "parfive==2.2.0",
    "typer==0.7.0",
    "ipinfo==5.1.1",
    "google-cloud-storage==3.0.0",
    "py3dmol==2.1.0",
    "biopython==1.85",
    "datasets==2.19.1",
    "tensorflow-datasets==4.9.8",
    "adjusttext==1.3.0",
    "types-tqdm==4.67.0.20250516",
    "types-tensorflow==2.18.0.20250516",
    "pandas-stubs==2.2.3.250527",
    "types-seaborn==0.13.2.20250516",
    "types-networkx==3.5.0.20250610",
    "scipy-stubs==1.15.3.0",
    "click==8.1.7",
    "ml-dtypes==0.5.1",
    "tensorstore==0.1.72",
    "orbax-checkpoint==0.11.9",
    "jax-cuda12-plugin>=0.7.1",
    "triton>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "example"]

[tool.uv.sources]
dlfb = { git = "https://github.com/deep-learning-for-biology/dlfb.git" }
